--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
+.whole{
+
+  background-image:linear-gradient(#F8B195 , #F67280 ,  #C06C84 ,  #6C5B7B  , #355C7D ); 
+  background-attachment:fixed;
+  background-repeat: no-repeat; 
+}
+.thisCard{
+
+  width: 400px;
+  align-content: center;
+  min-width: 400px;
+  max-width: 1000px;
+
+
+}
+.item{
+  float: left;
+
+
+}
+.taskButton{
+  float: right;
+  
+
+
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +31,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+ 
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+html{
+  background-image:linear-gradient(#F8B195 , #F67280 ,  #C06C84 ,  #6C5B7B  , #355C7D ); 
+  background-attachment:fixed;
+  background-repeat: no-repeat; 
+  
+}
+input{
+
+  width: 350px;
+  outline: none;
+  
 }
