Modified CSS files

--- a/src/index.css
+++ b/src/index.css
@@ -9,20 +9,31 @@
   width: 400px;
   align-content: center;
   min-width: 400px;
-  max-width: 1000px;
+  max-width: 900px;
 
 
 }
 .item{
-  float: left;
+  align-content: center;
 
 
 }
-.taskButton{
-  float: right;
+.taskButtons{
+  align-content: center;
+  margin: 10px;
+  display: inline;
   
 
-
+}
+.markButton{
+  float: left;
+  
+}
+.form-check-input{
+  position: absolute;
+  float: right
+  
+  
 }
 body {
   margin: 0;
@@ -44,6 +55,7 @@ html{
   background-attachment:fixed;
   background-repeat: no-repeat; 
   
+  
 }
 input{
 
@@ -51,3 +63,4 @@ input{
   outline: none;
   
 }
+
